--- a/css/style.css
+++ b/css/style.css
@@ -64,17 +64,36 @@ main {
     border-radius: 50%;
 }
 
-/* .circuloClicado {
-    background: rgb(240,242,239);
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    display:none;
-    /* position: absolute; */
- */
+ @media(min-width:425px){
+    body {
+        width:100%;
+        height:100%;
+    }
 
+    .navbar {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
+    .btn-pause {
+        display: none;
+    }
+    
+    .circulo {
+        width:80px;
+        height:80px;
+    }
 
+    .pontos {
+        margin-left: 140px;
+    }
+
+    .cronometro {
+        margin-left: 300px;
+        width: 65px;
+    }
+ }
 
 
 
