--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ main {
     border-radius: 50%;
 }
 
- @media(min-width:425px){
+/* @media(min-width:425px){
     body {
         width:100%;
         height:100%;
@@ -93,7 +93,7 @@ main {
         margin-left: 300px;
         width: 65px;
     }
- }
+} */
 
 
 
