--- a/css/style.css
+++ b/css/style.css
@@ -65,20 +65,20 @@ main {
     border-radius: 50%;
 }
 
-/* @media(min-width:425px){
+@media(max-width:500px){
     body {
         width:100%;
         height:100%;
+    }
+    main {
+        width: 100%;
+        height: 100%;
     }
 
     .navbar {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-    }
-
-    .btn-pause {
-        display: none;
     }
     
     .circulo {
@@ -87,14 +87,18 @@ main {
     }
 
     .pontos {
-        margin-left: 140px;
+        margin-left: 205px;
+        width: 60px;
+        font-size: 25px;
+        font-weight: bold;
+        text-align: center;
     }
 
     .cronometro {
         margin-left: 300px;
         width: 65px;
     }
-} */
+} 
 
 
 
