--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ main {
     border-radius: 50%;
 }
 
-@media(max-width:500px){
+@media (max-width:500px){
     body {
         width:100%;
         height:100%;
@@ -76,9 +76,9 @@ main {
     }
 
     .navbar {
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
+        width: 80%;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     
     .circulo {
@@ -87,16 +87,22 @@ main {
     }
 
     .pontos {
-        margin-left: 205px;
+        margin-left: 155px;
         width: 60px;
-        font-size: 25px;
+        font-size: 45px;
         font-weight: bold;
         text-align: center;
     }
 
     .cronometro {
-        margin-left: 300px;
+        margin-left: 238px;
         width: 65px;
+    }
+
+    .btn-crono {
+        padding: 6px;
+        width: 50px;
+        margin-top: 10px;
     }
 } 
 
